# glycoanalysis

./: .gitignore  README.md
compareApp/: app.R
docs/: index.html  style.css
docs/glycoexplore/: app.js  index.html  style.css
docs/glycoprep/: app.js  index.html  style.css  v1.html
docs/test/: index.html  style.css
exploreApp/: app.R  run.R
glycoprep/: .dockerignore  README.md  pyproject.toml
glycoprep/data/db/: human_colon.xlsx
glycoprep/data/input/: metadata.tsv
glycoprep/data/output/: comparison_report.html  comparison_report.txt  glycoprep_out.tsv  original_output.csv  unmatched_peaks.tsv
glycoprep/src/glycoprep/: __init__.py  __main__.py  calibration.py  cli.py  io.py  matching.py
glycoprep/utils/: compare_outputs.py  compare_outputs_html.py  excel2file.py
glycoprep/web/: Dockerfile  docker-compose.yml  nginx.example.conf
glycoprep/web/backend/: app.py  models.py  pipeline.py  routes.py
glycoprep/web/frontend/: index.html  package-lock.json  package.json  vite.config.js
glycoprep/web/frontend/src/: App.svelte  app.css  main.js
glycoprep/web/frontend/src/components/: CompositionChart.svelte  ConfidenceChart.svelte  Dashboard.svelte  DownloadButtons.svelte  ErrorView.svelte  PpmChart.svelte  Progress.svelte  SampleTable.svelte  ShiftTable.svelte  StatCard.svelte  StepIndicator.svelte  Upload.svelte
glycoprep/web/frontend/src/lib/: api.ts  stores.ts  types.ts
